part 2 uiux login

--- a/login.html
+++ b/login.html
@@ -43,8 +43,8 @@
             position: relative;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            padding: 80px;
+            justify-content: flex-start;
+            padding: 120px 80px 80px;
             overflow: hidden;
         }
 
