--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
 
     <header class="app-header">
         <div class="brand">
-            <h2>Aptitude Labs <span class="badge">CMS v4.0</span></h2>
+            <h2>Aptitude Labs <span class="badge">CMS v4.1</span></h2>
         </div>
         <div class="user-profile">
             <span class="status-dot online"></span>
@@ -152,10 +152,23 @@
         </main>
     </div>
 
+    <div id="admin-login-overlay" class="login-overlay">
+        <div class="login-box">
+            <h3>Admin Access</h3>
+            <div class="form-group">
+                <input type="email" id="adm-email" class="input-field" placeholder="Admin Email" value="aptitudelabshost@gmail.com">
+            </div>
+            <div class="form-group">
+                <input type="password" id="adm-pass" class="input-field" placeholder="Password">
+            </div>
+            <button id="adm-login-btn" class="btn-primary full-width">Login to Console</button>
+            <p id="login-error" class="error-text"></p>
+        </div>
+    </div>
+
     <div id="toast-container"></div>
 
     <script src="firebase-config.js"></script>
-    
     <script src="admin.js"></script>
 </body>
 </html>
