Commit added sample create profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -195,7 +195,7 @@
                     <div class="stat-value" id="total-xp">0</div>
                 </div>
                 <div class="card stat-box streak-box">
-                    <div class="stat-label" style="color: #FCD34D;">14 Day</div>
+                    <div class="stat-label" style="color: #FCD34D;"><span id="streak-count">0</span> Day</div>
                     <div class="stat-value">STREAK <span class="fire-icon">🔥</span></div>
                 </div>
             </div>
