Commit added sample create profile 123

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
             <a href="dashboard.html" class="active">Dashboard</a>
             <a href="mocks.html">Mocks</a> 
             <a href="#">Practice</a>
-            <a href="#">Leaderboard</a>
+            <a href="leaderboard.html">Leaderboard</a>
             <a href="#">Analysis</a>
             <a href="#">Mentor</a>
             <a href="pricing.html">Pricing</a>
