commit added analysis page

--- a/dashboard.html
+++ b/dashboard.html
@@ -52,10 +52,10 @@
         <div class="nav-links">
             <a href="dashboard.html" class="active">Dashboard</a>
             <a href="mocks.html">Mocks</a> 
-            <a href="#">Practice</a>
+            <a href="practice.html">Practice</a>
             <a href="leaderboard.html">Leaderboard</a>
-            <a href="#">Analysis</a>
-            <a href="#">Mentor</a>
+            <a href="analysis.html">Analysis</a>
+            <a href="mentor.html">Mentor</a>
             <a href="pricing.html">Pricing</a>
         </div>
         <!-- #page01.02.03: User Actions (Settings, Logout) -->
