--- a/mocks.html
+++ b/mocks.html
@@ -37,10 +37,10 @@
         <div class="nav-links">
             <a href="dashboard.html">Dashboard</a>
             <a href="mocks.html" class="active">Mocks</a> 
-            <a href="#">Practice</a>
-            <a href="#">Leaderboard</a>
-            <a href="#">Analysis</a>
-            <a href="#">Mentor</a>
+            <a href="practice.html">Practice</a>
+            <a href="leaderboard.html">Leaderboard</a>
+            <a href="analysis.html">Analysis</a>
+            <a href="mentor.html">Mentor</a>
             <a href="pricing.html">Pricing</a>
         </div>
         <div class="flex align-center gap-2 text-gray-400">
