--- a/mentor.html
+++ b/mentor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard | Aptitude Labs</title>
+    <title>Mentor | Aptitude Labs</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Rajdhani:wght@600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link rel="stylesheet" href="dashboard.css">
@@ -19,9 +19,9 @@
         <a href="dashboard.html">Dashboard</a>
         <a href="mocks.html">Mocks</a> 
         <a href="practice.html">Practice</a>
-        <a href="leaderboard.html" class="active">Leaderboard</a>
+        <a href="leaderboard.html">Leaderboard</a>
         <a href="analysis.html">Analysis</a>
-        <a href="mentor.html">Mentor</a>
+        <a href="mentor.html" class="active">Mentor</a>
         <a href="pricing.html">Pricing</a>
     </div>
     <div class="flex align-center gap-2 text-gray-400">
