--- a/mocks.html
+++ b/mocks.html
@@ -16,38 +16,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <script src="firebase-config.js"></script>
 
-    <script>
-        function logoutUser() {
-            try {
-                if (typeof firebase !== 'undefined' && firebase.auth()) {
-                    firebase.auth().signOut();
-                }
-            } catch (e) { console.log(e); }
-            window.location.href = 'login.html';
-        }
-    </script>
-</head>
+    </head>
 <body>
-
-    <nav class="top-nav">
-        <div class="brand">
-            <span class="material-icons-round brand-icon">change_history</span>
-            APTITUDE LABS
-        </div>
-        <div class="nav-links">
-            <a href="dashboard.html">Dashboard</a>
-            <a href="mocks.html" class="active">Mocks</a> 
-            <a href="practice.html">Practice</a>
-            <a href="leaderboard.html">Leaderboard</a>
-            <a href="analysis.html">Analysis</a>
-            <a href="mentor.html">Mentor</a>
-            <a href="pricing.html">Pricing</a>
-        </div>
-        <div class="flex align-center gap-2 text-gray-400">
-            <span class="material-icons-round" style="cursor:pointer; font-size:24px;">settings</span>
-            <span class="material-icons-round" onclick="logoutUser()" style="cursor:pointer; font-size:24px; margin-left:15px; color:#ef4444;">logout</span>
-        </div>
-    </nav>
 
     <div class="main-container">
         
@@ -138,6 +108,7 @@
     </div>
     
     <script src="mocks.js"></script>
+    <script src="navbar.js"></script>
 
 </body>
 </html>
