--- a/analysis.html
+++ b/analysis.html
@@ -12,7 +12,9 @@
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="navbar.css"> <link rel="stylesheet" href="analysis.css"> <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <link rel="stylesheet" href="analysis.css">
+    
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <script src="firebase-config.js"></script>
@@ -178,5 +180,8 @@
     </div>
 
     <script src="analysis-charts.js"></script>
-    <script src="navbar.js"></script> <script src="analysis.js"></script> </body>
+    <script src="analysis.js"></script>
+    <script src="navbar.js"></script>
+    
+</body>
 </html>
